# c2022-challenge

./: 2022080911025谭浩翔-实验报告.doc  AIchess.docx  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  C语言学习笔记.md  Diophantus.cpp  ForTest.txt  Gobang.sln  Goldbach.cpp  Isprime.cpp  README.md  allPrime.cpp  allPrimes.cpp  challenge五子棋AI实验报告.docx  encrypt _decrypt.cpp  encrypt_decrypt.cpp  gobang_AI.cpp  gobang_AI.h  gobang_GUI.cpp  gobang_GUI.h  gobang_main.cpp  hanoi.cpp  init.h  isPrime.cpp  level1pushBoxes.cpp  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  linkedList.cpp  list.cpp  main.cpp  maze.cpp  maze.sln  narcissus.cpp  p01_runningLetter.cpp  p02_isPrime.h  p02_isPrime_function.cpp  p02_isPrime_main.cpp  p03_Diophantus.cpp  (+43 more)
实验/: Al.cpp  Al.h  CMakeLists.txt  Chess.cpp  Chess.h  ChessBoard.cpp  ChessBoard.h  ChessGame.cpp  ChessGame.h  Game_Start.cpp  GoPng.cpp  Makefile.win  Node.cpp  Node.h  Player.cpp  Player.h  Project_YiWu.dev  Project_YiWu.layout  README.md  WuZiQi.h  YiWu.cpp  YiWu.h  ai.txt  bot.c  control.c  cut.cpp  evaluate.c  experimental report.md  gameplay.c  gobang.h  graphics.c  head.h  main.c  main.cpp  mainchess.c  min_max.cpp  myscore.cpp  play.cpp  play.h  report.txt  (+13 more)
实验/AIChess_VS/: AI.cpp  AIChess_VS.h  AIChess_VS.sln  AIChess_VS.vcxproj  AIChess_VS.vcxproj.filters  control.cpp  main.cpp  manual.h  map.cpp
实验/wuziqi/: wuziqi.sln  代码.docx  实验报告.docx
实验/wuziqi/wuziqi/: AI.cpp  ButtonClick.cpp  Chess_Repentance.cpp  Chess_type.cpp  Game.cpp  InitBoard.cpp  Judge.cpp  Location_pruning.cpp  UI.cpp  (+17 more)
实验/五子棋最终版/: AI五子棋.sln  AI五子棋.vcxproj
(+225 files in other folders)
